# hypane

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_zh.md  TODO.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  migrate.py
app/agent/: __init__.py  base.py  pi_mono.py  tools.py
app/models/: __init__.py  panel.py  storage.py  task.py
app/routes/: __init__.py  api_agent.py  api_cards.py  api_dashboards.py  api_market.py  api_panels.py  api_storage.py  api_tasks.py  card_actions.py  cards.py  chat.py  console.py  dashboard.py  history.py  panels.py  sessions.py  tasks.py
app/sandbox/: __init__.py  docker.py  executor.py  protocol.py  simple.py
app/services/: agent.py  card_data.py  dashboard.py  history.py  market.py  panel_theme.py  panels.py  panels_v2.py  snapshots.py  storage.py  task_scheduler.py  tasks_v2.py
app/templates/: base.html  console.html  dashboard.html
collectors/: __init__.py  crypto.py  executor.py  hackernews.py  presets.py  weather.py
docker/: entrypoint.sh
docs/: DESIGN.md
extensions/: dashboard-tools.ts
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: console.js  main.js
market/: README.md
market/bitcoin/: facade.html  handler.py  manifest.json
market/cookie-clicker/: facade.html  handler.py  manifest.json
scheduler/: decorators.py  main.py  panel_scheduler.py
scripts/: migrate_v1_to_v2.py
skills/: _system.md  card_examples.md  data_collection.md  news_hn.md  panel_examples.md  panel_market.md  todo.md  weather.md
(+41 files in other folders)
