[project]
name = "hypane"
version = "0.1.0"
description = "AI-powered personal dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
    "apscheduler>=3.11.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.2.0",
    "beautifulsoup4>=4.14.3",
    "motor>=3.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
